# simian

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile.sh  custom.css  english-custom.json  english.json  license.txt  main.conf  monkey  readme.md  symbols.txt  wipe.sh
languages/: english.json
libs/tmp/: cpp-httplib-gitclone.cmake  cpp-httplib-gitupdate.cmake  cpp-httplib-mkdirs.cmake  rapidjson-gitclone.cmake  rapidjson-gitupdate.cmake  rapidjson-mkdirs.cmake
quotes/: english.json
src/: monkey.cc  simian.cc
themes/: .css  8008.css  _list.json  catpuccin.css  custom.css  horizon.css
